<resources>
    <string name="app_name">MultipleLanguage</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="action_devinfo">Developer</string>
    <string name="share_app">Share App</string>
    <string name="language_setting">Change Language</string>
    <string name="action_change_pass">Change Password</string>
    <string name="select_note">Select your language</string>
    <string name="hello">Hello</string>


    <string-array name="lang_select">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Chinese</item>
    </string-array>
    <string name="clickme">Click Me</string>


</resources>
